# mcp-suite

./: .env.example  .gitignore  README.md  TODO.md  setup.sh
agents/: README.md  code-reviewer-ja.md  debugger.md  doc-manager.md  git-workflow-ja.md  issue-manager.md  security-reviewer.md  test-writer.md
claude/: CLAUDE.md  settings.json
codex/: AGENTS.md  config.toml
codex/agents/: code-reviewer-ja.toml  debugger.toml  git-workflow-ja.toml  security-reviewer.toml  test-writer.toml
codex/hooks/: claude-parity-pre-tool-use.py
config/: mcp_settings.json
custom/mcp-tools/: Cargo.toml  README.md
custom/mcp-tools/src/: diff.rs  directory_tree.rs  file_outline.rs  find.rs  git_diff.rs  git_log.rs  grep.rs  main.rs  web_fetch.rs
custom/terraform/: Cargo.toml
custom/terraform/src/: main.rs  terraform.rs
docs/: benchmark.md
oss/context7/: README.md
oss/github/: README.md
oss/playwright/: README.md
scripts/: benchmark.py  benchmark_results.json  benchmark_web_fetch.py  benchmark_web_fetch_results.json
