[package]
name = "mcp-tools"
version = "0.1.0"
edition = "2021"
description = "Lightweight MCP server with grep, diff, find tools for AI assistants"

[[bin]]
name = "mcp-tools"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
similar = { version = "2", features = ["text"] }
walkdir = "2"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
