[package]
name = "terraform-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for Terraform commands with clean, token-efficient output"

[[bin]]
name = "terraform-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
